syntax = "proto3";
package gameapi;

service Extra {
   rpc ServiceInfo(ServiceInfoRequest) returns (ServiceInfoReply);
}

message ServiceInfoRequest {
}

message ServiceInfoReply {
   bool ready = 1;
}

service Game {
   rpc NewPlayer(NewPlayerRequest) returns (Player);
   rpc GetPlayer(GetPlayerRequest) returns (Player);
   rpc ListPlayers(ListPlayersRequest) returns (stream Player);
   rpc MovePlayer(MovePlayerRequest) returns (Player);
}

message NewPlayerRequest {
   string name = 1;
}

message GetPlayerRequest {
   string id = 1;
}

message ListPlayersRequest {
}

message Vector2 {
   float x = 1;
   float y = 2;
}

message MovePlayerRequest {
   string id = 1;
   Vector2 newCoordinates = 2;
   Vector2 newDirection = 3;
}

message Player {
   enum Role {
      Wolf = 0;
      Fish = 1;
      Tiger = 2;
      Turkey = 3;
   }
   string id = 1;
   string name = 2;
   Role role = 3;
   Vector2 coordinates = 4;
   Vector2 direction = 5;
}
